[UPD] Added header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Dropbox</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <div class="content-header">
+            <ul>
+                <li><img src="./img/logo-small.png" alt="Dropbox"></li>
+                <li><button>Perché Dropbox</button></li>
+                <li><button>Funzioni</button></li>
+                <li><button>Piani e Prezzi</button></li>
+            </ul>
+            <ul>
+                <li><button>Supporto</button></li>
+                <li><button>Contatta l'ufficio vendite</button></li>
+                <li><button>Accedi</button></li>
+                <li><button class="bg-blue">Inizia</button></li>
+            </ul>
+        </div>
+    </header>
+    <!-- Main -->
+    <main>
+        
+    </main>
+    <!-- Footer -->
+    <footer>
+
+    </footer>
 </body>
 </html>
