[UPD] First main section added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Dropbox</title>
 </head>
@@ -26,7 +27,37 @@
     </header>
     <!-- Main -->
     <main>
-        
+        <div class="container-full">
+            <div class="row">
+                <div class="col-65">
+                    <div class="content-h1">
+                        <strong>Tutto ciò che ti serve per il lavoro, in un unico posto</strong>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-20">
+                    <div class="content-text">
+                        Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.<br>
+                        Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                    </div>
+                    <div class="button bg-lightblue">
+                        Inizia la tua prova gratuita
+                    </div>
+                    <div class="content-text">
+                          Annulla in qualsiasi momento  
+                    </div>
+                    <div class="arrow">
+                        <i class="fa-solid fa-arrow-down fa-2xl"></i>
+                    </div>
+                </div>
+                <div class="col-45">
+                    <div class="jumbotron">
+                        <img src="./img/jumbo.png" alt="Dropbox">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
