[UPD] Defined columns layout

--- a/index.html
+++ b/index.html
@@ -58,6 +58,51 @@
                 </div>
             </div>
         </div>
+        <div class="container-white">
+            <div class="row">
+                <div class="col-50">
+                    <div class="title">
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-50">
+                    <div class="checkbox">
+                    
+                    </div>
+                </div>
+            </div>
+            <div class="row-vert">
+                <div class="col-16">
+                    <div class="vert">
+
+                    </div>
+                </div>
+                <div class="col-16">
+                    <div class="vert">
+
+                    </div>
+                </div>
+                <div class="col-16">
+                    <div class="vert">
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-50">
+                    <div class="hor">
+
+                    </div>
+                </div>
+            </div>
+            
+
+
+
+
+        </div>
     </main>
     <!-- Footer -->
     <footer>
