[UPD] First group of columns completed

--- a/index.html
+++ b/index.html
@@ -62,38 +62,170 @@
             <div class="row">
                 <div class="col-50">
                     <div class="title">
-
+                        <strong>Trova il piano business che fa per te</strong>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-50">
-                    <div class="checkbox">
-                    
+                    <div class="radio">
+                        <input type="radio"><span class="text">Fatturazione mensile</span>
+                        <input type="radio"><span class="text">Fatturazione annuale</span>
                     </div>
                 </div>
             </div>
             <div class="row-vert">
                 <div class="col-16">
-                    <div class="vert">
-
+                    <div class="vert-1">
+                        <i class="fa-solid fa-user"></i>Singolo
+                    </div>
+                    <hr>
+                    <div class="vert-2">
+                        <h3>Professional</h3>
+                    </div>
+                    <div class="vert-3">
+                        <strong>&euro; 12.00</strong>
+                    </div>
+                    <div class="vert-4">
+                        /mese
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-user"></i> 1 utente
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura
+                    </div>
+                    <div class="vert-5-btn">
+                        Prova gratis per 30 giorni
+                    </div>
+                    <div class="vert-5">
+                        oppure <a href="#">acquista ora</a>
+                    </div>
+                    <hr class="hr-sm">
+                    <div class="vert-5">
+                        <strong>Punti Salienti del piano</strong>
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Invia file fino a 100 GB con Dropbox Transfert
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Cartelle offline su dispositivi mobili
                     </div>
                 </div>
                 <div class="col-16">
-                    <div class="vert">
-
+                    <div class="vert-1">
+                        <i class="fa-solid fa-people-group"></i>Team
+                    </div>
+                    <hr>
+                    <div class="vert-2-a">
+                        <h3>Advanced</h3>
+                    </div>
+                    <div class="vert-3">
+                        <strong>&euro; 18.00</strong>
+                    </div>
+                    <div class="vert-4">
+                        /utente/mese
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-user"></i> 3 o più utenti
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-folder"></i> Tutto lo spazio di cui ha bisogno il tuo team
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-share-nodes"></i> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                    </div>
+                    <div class="vert-5-btn">
+                        Prova gratis per 30 giorni
+                    </div>
+                    <div class="vert-5">
+                        oppure <a href="#">acquista ora</a>
+                    </div>
+                    <hr class="hr-sm">
+                    <div class="vert-5">
+                        <strong>Punti Salienti del piano</strong>
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Nessun limite di spazio per i file
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Cartelle offline su dispositivi mobili
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Risparmio del 50% rispetto alle iscrizioni singole
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Possibilità di inserire nuovi membri del team
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Gestione dei permessi in base ai ruoli
                     </div>
                 </div>
-                <div class="col-16">
-                    <div class="vert">
-
+                <div class="col-16-a">
+                    <div class="vert-1">
+                        <i class="fa-solid fa-building"></i>Azienda
+                    </div>
+                    <hr>
+                    <div class="vert-2-a">
+                        <h3>Enterprise</h3>
+                    </div>
+                    <div class="vert-3">
+                        <strong>Contattaci</strong>
+                    </div>
+                    <div class="vert-4">
+                        -
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-user"></i> 10 o più utenti
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-folder"></i> Soluzioni personalizzabili per la tua azienda
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-share-nodes"></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
+                    </div>
+                    <div class="vert-5-btn">
+                        Contattaci
+                    </div>
+                    <div class="vert-5">
+                        oppure <a href="#">acquista ora</a>
+                    </div>
+                    <hr class="hr-sm">
+                    <div class="vert-5">
+                        <strong>Punti Salienti del piano</strong>
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Cartelle offline su dispositivi mobili
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Servizio assistenza 24/h
+                    </div>
+                    <div class="vert-5">
+                        <i class="fa-solid fa-check" style="color: #74C0FC;"></i> Possibilità di personalizzazione totale
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-50">
-                    <div class="hor">
-
+                <div class="col-50-a">
+                    <div class="vert-1">
+                        <i class="fa-solid fa-building"></i>Team
+                    </div>
+                    <hr>
+                    <div class="vert-2-b">
+                        <h3>Enterprise</h3>
+                    </div>
+                    <div class="vert-3-a">
+                        <strong>Contattaci</strong>
+                    </div>
+                    <div class="vert-5-a">
+                        Soluzioni personalizzare e supporto su misura per aiutare i professionisti IT<br>
+                        nella gestione su qualsiasi scala.
+                    </div>
+                    <div class="vert-5-btn-a">
+                        Contatta l'ufficio vendite
                     </div>
                 </div>
             </div>
