[UPD] Second section completed and styled - layout slightly fixed to fit elements in

--- a/index.html
+++ b/index.html
@@ -229,10 +229,30 @@
                     </div>
                 </div>
             </div>
-            
-
-
-
+            <div class="row">
+                <div class="col-70">
+                    <img src="./img/partner.png" alt="Dropbox">
+                </div>
+                <div class="col-30">
+                    <div class="title-3">
+                        <h3>Entra in contatto con un partner Dropbox</h3>
+                    </div>
+                    <div class="text-3">
+                        Trova un partner Dropbox e HelloSign di fiducia.<br>
+                        Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                    </div>
+                    <div>
+                        <button class="bg-white">Trova un partner</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-50">
+                    <div class="title">
+                        <strong>Esegui più operazioni con Dropbox Business</strong>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </main>
