--- a/index.html
+++ b/index.html
@@ -253,7 +253,76 @@
                     </div>
                 </div>
             </div>
-
+            <div class="brandnew-row">
+                <div class="col-sm">
+                    <div class="cont-sm">
+                        <img src="./img/business-feature-switching-tools.png" alt="Dropbox">
+                    </div>
+                    <div class="title-3">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    </div>
+                    <div class="text-3">
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="cont-sm">
+                        <img src="./img/business-feature-send-files-it.png" alt="Dropbox">
+                    </div>
+                    <div class="title-3">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    </div>
+                    <div class="text-3">
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="cont-sm">
+                        <img src="./img/business-feature-coordinate-it.png" alt="Dropbox">
+                    </div>
+                    <div class="title-3">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    </div>
+                    <div class="text-3">
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                    </div>
+                </div>
+            </div>
+            <div class="brandnew-row">
+                <div class="col-sm">
+                    <div class="cont-sm">
+                        <img src="./img/business-feature-integrations-it.png" alt="Dropbox">
+                    </div>
+                    <div class="title-3">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    </div>
+                    <div class="text-3">
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="cont-sm">
+                        <img src="./img/business-feature-multi-device.png" alt="Dropbox">
+                    </div>
+                    <div class="title-3">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    </div>
+                    <div class="text-3">
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="cont-sm">
+                        <img src="./img/business-feature-security.png" alt="Dropbox">
+                    </div>
+                    <div class="title-3">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                    </div>
+                    <div class="text-3">
+                        Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- Footer -->
