[UPD] New section added and styled

--- a/index.html
+++ b/index.html
@@ -323,6 +323,16 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-50">
+                    <div class="title2">
+                        <strong>Più di 500.000 team utilizzano Dropbox Business</strong>
+                    </div>
+                    <div class="link">
+                        <a href="#">Scopri di più sui nostri clienti</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- Footer -->
