--- a/index.html
+++ b/index.html
@@ -334,6 +334,50 @@
                 </div>
             </div>
         </div>
+        <div class="last-container-full">
+            <div class="row">
+                <div class="col-33">
+                    <div class="square1">
+                        <img src="./img/designit.svg" alt="Dropbox">
+                    </div>
+                    <div class="square2">
+                        <img src="./img/arizona_state_university.svg" alt="Dropbox">
+                    </div>
+                    <div class="square3">
+                        <img src="./img/university_of_florida.svg" alt="Dropbox">
+                    </div>
+                    <div class="square4">
+                        <img src="./img/topps.svg" alt="Dropbox">
+                    </div>
+                </div>
+                <div class="col-33-b">
+                    <div class="square5">
+                        <img src="./img/designit.svg" alt="Dropbox">
+                    </div>
+                    <hr class="hr-medium">
+                    <div class="text-4">
+                            "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper."
+                    </div>
+                    <div class="text-4">
+                        Morten Thomsen, Global IT Lead
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="square6">
+                        <img src="./img/world_bicycle_relief.svg" alt="Dropbox">
+                    </div>
+                    <div class="square7">
+                        <img src="./img/hearst_corp.svg" alt="Dropbox">
+                    </div>
+                    <div class="square8">
+                        <img src="./img/lonely_planet.svg" alt="Dropbox">
+                    </div>
+                    <div class="square9">
+                        <img src="./img/clear_channel.svg" alt="Dropbox">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
