[UPD] Added next section and styled

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             </div>
             <div class="row">
                 <div class="col-50">
-                    <div class="title2">
+                    <div class="title-2">
                         <strong>Più di 500.000 team utilizzano Dropbox Business</strong>
                     </div>
                     <div class="link">
@@ -337,21 +337,21 @@
         <div class="last-container-full">
             <div class="row">
                 <div class="col-33">
-                    <div class="square1">
+                    <div class="square-1">
                         <img src="./img/designit.svg" alt="Dropbox">
                     </div>
-                    <div class="square2">
+                    <div class="square-2">
                         <img src="./img/arizona_state_university.svg" alt="Dropbox">
                     </div>
-                    <div class="square3">
+                    <div class="square-3">
                         <img src="./img/university_of_florida.svg" alt="Dropbox">
                     </div>
-                    <div class="square4">
+                    <div class="square-4">
                         <img src="./img/topps.svg" alt="Dropbox">
                     </div>
                 </div>
                 <div class="col-33-b">
-                    <div class="square5">
+                    <div class="square-5">
                         <img src="./img/designit.svg" alt="Dropbox">
                     </div>
                     <hr class="hr-medium">
@@ -363,17 +363,33 @@
                     </div>
                 </div>
                 <div class="col-33">
-                    <div class="square6">
+                    <div class="square-6">
                         <img src="./img/world_bicycle_relief.svg" alt="Dropbox">
                     </div>
-                    <div class="square7">
+                    <div class="square-7">
                         <img src="./img/hearst_corp.svg" alt="Dropbox">
                     </div>
-                    <div class="square8">
+                    <div class="square-8">
                         <img src="./img/lonely_planet.svg" alt="Dropbox">
                     </div>
-                    <div class="square9">
+                    <div class="square-9">
                         <img src="./img/clear_channel.svg" alt="Dropbox">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-bottom-blue">
+            <div class="row gap-100 margin-left-150">
+                <div class="col-blue width-45">
+                    <div class="content">
+                        <div class="purple">
+                            <strong>Porta Dropbox Business nella tua azienda.</strong>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-blue">
+                    <div class="content">
+                        <button class="button-bottom">Inizia la tua prova gratuita</button>
                     </div>
                 </div>
             </div>
