[UPD] Latest section completed and minor layout fixes

--- a/index.html
+++ b/index.html
@@ -381,16 +381,36 @@
         <div class="container-bottom-blue">
             <div class="row gap-100 margin-left-150">
                 <div class="col-blue width-45">
-                    <div class="content">
-                        <div class="purple">
-                            <strong>Porta Dropbox Business nella tua azienda.</strong>
-                        </div>
+                    <div class="content purple">
+                        <strong>Porta Dropbox Business nella tua azienda.</strong>
                     </div>
                 </div>
                 <div class="col-blue">
                     <div class="content">
                         <button class="button-bottom">Inizia la tua prova gratuita</button>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-white-2">
+            <div class="row">
+                <div class="col-50-2">
+                    <div class="content-2 font-size-30">
+                        <strong>Domande frequenti</strong>
+                    </div>
+                    <hr class="hr-large">
+                    <div class="text-3-b">
+                        <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong><i class="fa-solid fa-angle-down"></i>
+                    </div>
+                    <hr class="hr-large">
+                    <div class="text-3-b">
+                        <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong><i class="fa-solid fa-angle-down"></i>
+                    </div>
+                    <hr class="hr-large">
+                    <div class="text-3-b">
+                        <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong><i class="fa-solid fa-angle-down"></i>
+                    </div>
+                    <hr class="hr-large">
                 </div>
             </div>
         </div>
