[UPD] Added footer and page completed - (code about to be reviewed in latest push)

--- a/index.html
+++ b/index.html
@@ -417,7 +417,57 @@
     </main>
     <!-- Footer -->
     <footer>
-
+        <div class="row">
+            <div class="col-foot">
+                <ul><strong>Dropbox</strong>
+                    <li class="special">Applicazione desktop</li>
+                    <li class="special">Perché Dropbox</li>
+                    <li class="special">Piani</li>
+                    <li class="special">Sicurezza</li>
+                    <li class="special">Funzioni</li>
+                </ul>
+                <hr class="hr-medium-2">
+                <div class="the-end-finally">
+                <i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up"></i>
+                </div>
+            </div>
+            <div class="col-foot">
+                <ul><strong>Prodotti</strong>
+                    <li class="special">Applicazione desktop</li>
+                    <li class="special">Perché Dropbox</li>
+                    <li class="special">Piani</li>
+                    <li class="special">Sicurezza</li>
+                    <li class="special">Funzioni</li>
+                </ul>
+            </div>
+            <div class="col-foot">
+                <ul><strong>Azienda</strong>
+                    <li class="special">Applicazione desktop</li>
+                    <li class="special">Perché Dropbox</li>
+                    <li class="special">Piani</li>
+                    <li class="special">Sicurezza</li>
+                    <li class="special">Funzioni</li>
+                </ul>
+            </div>
+            <div class="col-foot">
+                <ul><strong>Supporto</strong>
+                    <li class="special">Applicazione desktop</li>
+                    <li class="special">Perché Dropbox</li>
+                    <li class="special">Piani</li>
+                    <li class="special">Sicurezza</li>
+                    <li class="special">Funzioni</li>
+                </ul>
+            </div>
+            <div class="col-foot">
+                <ul><strong>Community</strong>
+                    <li class="special">Applicazione desktop</li>
+                    <li class="special">Perché Dropbox</li>
+                    <li class="special">Piani</li>
+                    <li class="special">Sicurezza</li>
+                    <li class="special">Funzioni</li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
