[FIX] Majopr changes to layout in terms of columns and containers

--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
                 </div>
             </div>
         </div>
-        <div class="container-bottom-blue">
-            <div class="row gap-100 margin-left-150">
-                <div class="col-blue width-45">
+        <div class="container-white-3">
+            <div class="row-s">
+                <div class="col-blue">
                     <div class="content purple">
                         <strong>Porta Dropbox Business nella tua azienda.</strong>
                     </div>
@@ -392,7 +392,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-white-2">
+        <div class="container-white">
             <div class="row">
                 <div class="col-50-2">
                     <div class="content-2 font-size-30">
